Closed Bug 409461 Opened 18 years ago Closed 18 years ago

"ASSERTION: SVG frame expected" with svg:after

Categories

(Core :: SVG, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Loading the testcase triggers: ###!!! ASSERTION: SVG frame expected: 'aKid->IsFrameOfType(nsIFrame::eSVG)', file /Users/jruderman/trunk/mozilla/layout/svg/base/src/nsSVGUtils.cpp, line 1003
Attached file testcase
non-foreignobject SVG probably shouldn't allow generated content in its ProcessChildren call.
Attached patch suggested changeSplinter Review
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Attachment #294373 - Flags: superreview?(bzbarsky)
Attachment #294373 - Flags: review?(bzbarsky)
Comment on attachment 294373 [details] [diff] [review] suggested change Yeah, let's do this.
Attachment #294373 - Flags: superreview?(bzbarsky)
Attachment #294373 - Flags: superreview+
Attachment #294373 - Flags: review?(bzbarsky)
Attachment #294373 - Flags: review+
Attachment #294373 - Flags: approval1.9?
Comment on attachment 294373 [details] [diff] [review] suggested change a=beltzner for 1.9
Attachment #294373 - Flags: approval1.9? → approval1.9+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
See bug 413016 for a similar testcase that still triggers the assertion.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: