Bug 409461 - ASSERTION: SVG frame expected with svg:after. r+sr=bzbarsky,a1.9=beltzner